--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
         <artifactId>dl4j</artifactId>
         <version>1.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.cliftonlabs</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>3.1.0</version>
+    </dependency>
   </dependencies>
 
   <build>
