First P3-capable version.

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>org.theseed</groupId>
   <artifactId>dl4j.eval</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
 
   <name>dl4j.eval</name>
   <url>https://www.patricbrc.org</url>
@@ -47,6 +47,11 @@
       <groupId>com.github.cliftonlabs</groupId>
       <artifactId>json-simple</artifactId>
       <version>3.1.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.theseed</groupId>
+        <artifactId>p3api</artifactId>
+        <version>0.0.1</version>
     </dependency>
   </dependencies>
 
