--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <nd4j.version>1.0.0-beta4</nd4j.version>
   </properties>
 
   <dependencies>
@@ -40,11 +41,6 @@
         <scope>test</scope>
     </dependency>
     <dependency>
-        <groupId>org.theseed</groupId>
-        <artifactId>dl4j</artifactId>
-        <version>1.0.0</version>
-    </dependency>
-    <dependency>
       <groupId>com.github.cliftonlabs</groupId>
       <artifactId>json-simple</artifactId>
       <version>3.1.0</version>
@@ -58,6 +54,11 @@
         <groupId>com.j2html</groupId>
         <artifactId>j2html</artifactId>
         <version>1.4.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.nd4j</groupId>
+        <artifactId>nd4j-native-platform</artifactId>
+        <version>${nd4j.version}</version>
     </dependency>
 </dependencies>
 
