--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <nd4j.version>1.0.0-beta4</nd4j.version>
+    <nd4j.version>1.0.0-M1.1</nd4j.version>
   </properties>
 
   <dependencies>
