--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,6 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.9</version>
     </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.1</version>
-    </dependency>
     <!-- https://mvnrepository.com/artifact/args4j/args4j -->
     <dependency>
         <groupId>args4j</groupId>
@@ -39,6 +34,12 @@
         <artifactId>hamcrest</artifactId>
         <version>2.2</version>
         <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.8.1</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.github.cliftonlabs</groupId>
