--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <url>https://www.patricbrc.org</url>
 
     <properties>
-        <nd4j.version>1.0.0-M1.1</nd4j.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
@@ -70,7 +69,7 @@
         </dependency>
         <dependency>
             <groupId>org.nd4j</groupId>
-            <artifactId>nd4j-native</artifactId>
+            <artifactId>nd4j-native-platform</artifactId>
             <version>${nd4j.version}</version>
         </dependency>
     </dependencies>
