--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,9 @@
         </dependency>
         <dependency>
             <groupId>org.nd4j</groupId>
-            <artifactId>nd4j-native-platform</artifactId>
+            <artifactId>nd4j-native</artifactId>
             <version>${nd4j.version}</version>
+            <classifier>linux-x86_64-compat</classifier>
         </dependency>
     </dependencies>
 
