--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
         </dependency>
         <dependency>
             <groupId>org.theseed</groupId>
+            <artifactId>sequence</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.theseed</groupId>
             <artifactId>shared</artifactId>
             <version>1.0.0</version>
         </dependency>
