Standard craziness for dl4j.eval.

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
         </dependency>
         <dependency>
             <groupId>org.theseed</groupId>
+            <artifactId>basic</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.theseed</groupId>
             <artifactId>dl4j.decision</artifactId>
             <version>1.0.0</version>
         </dependency>
